--- a/src/factor-styles.less
+++ b/src/factor-styles.less
@@ -5,6 +5,7 @@
 */
 html.factor-app {
   --my-custom-variable: rgb(4, 150, 255);
+  --color-primary: #ff044a;
   .site-head, .intro {
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(17,13,71,1) 35%, rgba(4,150,255) 100%);
