--- a/src/factor-styles.less
+++ b/src/factor-styles.less
@@ -41,4 +41,10 @@ html.factor-app {
   justify-content: center;
   }
  }
+ .work-single-entry .featured-image-wrap .featured-image {
+  @media (min-width: 900px){
+   width:50%;
+   margin: 0 auto;
+  }
+ }
 }
